--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
  <h2>Talks</h2>
 <ol type="1", class="c">
  <li> <b>MAL2IMAGE: Hybrid Image Transformation for Malware Classification</b>
-        Joint DIMVA / ESSoS Poster Session, 2018 <a href="https://distrinet.cs.kuleuven.be/events/essos/2018/index.html"</li>
+        Joint DIMVA / ESSoS Poster Session, 2018 (Paris, France) <a href="https://distrinet.cs.kuleuven.be/events/essos/2018/index.html"</li>
   <li> <b>Requirements from the Trenches: What Developers Want for FOSS Dependency Management?</b>
         REFSQ, 2020 (Virtual) <a href="https://refsq.org/2020/conference-programme/doctoral-symposium"</li>
    <li> <b>Typosquatting and Combosquatting Attacks on the Python Ecosystem</b>
