--- a/publications.html
+++ b/publications.html
@@ -71,6 +71,7 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
     <li> <b>Please hold on: more time = more patches? Automated program repair as anytime algorithms</b> 2nd International Workshop on Automated Program Repair (Virtual) <a href="http://program-repair.org/workshop-2021/"</li>
    <li> <b>LastPyMile: Identifying the Discrepancy between Sources and Packages</b> ESEC/FSE 2021 (Virtual) <a href="https://2021.esec-fse.org/details/fse-2021-papers/61/LastPyMile-Identifying-the-Discrepancy-between-Sources-and-Packages/"</li>
     <li> <b>LastPyMile: a lightweight approach for securing Python ecosystem from software supply chain attacks</b> SFSCon 2021 (Bolzano, Italy) <a href="https://www.sfscon.it/talks/lastpymile-a-lightweight-approach-for-securing-python-ecosystem-from-software-supply-chain-attacks/"</li>
+    <li> <b>py2src: Towards the Automatic (and Reliable) Identification of Sources for PyPI Package</b> Virtual <a href="https://conf.researchr.org/track/ase-2021/ase-2021-student-research-competition#event-overview"</li>
 
  </ol>
 
