update bio with awards

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@ body {
         In my free time, I like reading books (especially self-help books) and playing guitar (I am learning keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: lyvd@protonmail.com">Email</a>. </p>
       
+       <p>I was awared Marie-Cure Research Scholarship from 2017 to 2020. I was awared a silver medal at ASE SRC 2021.</p>
+      
       <p>I only make friends on Facebook with those I really know, those I really wanted to talk to. I share something on FB and you can follow me if you want.
       I want to make friends with those who share useful stuff that I can learn from</p>
     <p>  <a href="https://www.linkedin.com/in/ly-vu-865b5819b/">My LinkedIn</a></p>
