--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body {
       I am a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
       I was an Early Stage Researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a> from 2017 to 2020.
      Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. I have had a chance to work at SAP Security
-      Research (France) under the supervision of Henrik Plate and Antonino Sabetta, on the topic of software supply chain attacks. During the internship, we developed an approach and tool called LastPyMile to detect
+      Research (France) under the supervision of Henrik Plate and Antonino Sabetta, on the topic of software supply chain attacks. During the internship, we developed an approach and tool called <i>LastPyMile</i> to detect
         code injections in software supply chain attacks, and please check it out if you are interested in <a href="https://securitylab.disi.unitn.it/lib/exe/fetch.php?media=research_activities:experiments:esecfse2021.pdf">link</a>. This work was mentioned on <a href="https://news.ycombinator.com/item?id=28618074">HackerNews</a> and <a href="https://reproducible-builds.org/de/reports/2021-07/">Reproducible-builds</a>
       I have been maintaining a repository containing a list of papers and reports related to software supply chain security, check it out <a href="https://github.com/vuduclyunitn/software_supply_chain_papers/blob/main/papers.md">Here</a>
       <p>I have been studying and developing malware detection tools for computer systems from Windows malware classifiers to malicious packages in package repositories. With my colleagues, We had developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
@@ -137,7 +137,7 @@ body {
         In my free time, I like reading books (especially self-help books) and playing guitar (I am learning the keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: lyvd@protonmail.com">Email</a>. </p>
       
-       <p>I has been awarded the Marie-Cure Research Scholarship from 2017 to 2020. I has received a silver medal at ASE SRC 2021.</p>
+       <p>I has been awarded the Marie-Cure Research Scholarship from 2017 to 2020. I have won a silver medal at ASE SRC 2021 with the proposal <a href="https://www.researchgate.net/publication/354987698_PY2SRC_Towards_the_Automatic_and_Reliable_Identification_of_Sources_for_PyPI_Package">py2src</a>.</p>
       
       <p>I only make friends on Facebook with those I really know, those I really wanted to talk to. I share something on FB, and you can follow me if you want.
       I want to make friends with those who share useful stuff that I can learn from</p>
