--- a/index.html
+++ b/index.html
@@ -116,18 +116,19 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
+      <p>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
       I am a Ph.D. candidate at the University of Trento, Italy, supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a>, and I am working on software supply chain security for open-source software and automated program repair</h3>.
       I am a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
       I was an Early Stage Researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a> from 2017 to 2020.
-     Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. </h3>
+     Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. </p>
     
-      <h3>
+      <p>
       I have had a chance to work at SAP Security
       Research (France) under the supervision of Henrik Plate and Antonino Sabetta, on the topic of software supply chain attacks. During the internship, we developed an approach and tool called <i>LastPyMile</i> to detect
         code injections in software supply chain attacks, and please check it out if you are interested in <a href="https://securitylab.disi.unitn.it/lib/exe/fetch.php?media=research_activities:experiments:esecfse2021.pdf">link</a>. This work was mentioned on <a href="https://news.ycombinator.com/item?id=28618074">HackerNews</a> and <a href="https://reproducible-builds.org/de/reports/2021-07/">Reproducible-builds</a>
       I have been maintaining a repository containing a list of papers and reports related to software supply chain security, check it out <a href="https://github.com/vuduclyunitn/software_supply_chain_papers/blob/main/papers.md">Here</a>
-      <p>I have been studying and developing malware detection tools for computer systems from Windows malware classifiers to malicious packages in package repositories. With my colleagues, We had developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
+      </p>
+    <p>I have been studying and developing malware detection tools for computer systems from Windows malware classifiers to malicious packages in package repositories. With my colleagues, We had developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
         Levenshtein distance to flag potential combosquatting/typosquatting packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>. 
         </p>
       
