--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
       
       <p>I love writing and sharing techniques about Python. I like learning new stuff, especially those in programming, security, and history. With a basic understanding
         of the Python programming language, I like to help others to automate the boring stuff and make some profit.
-        In my free time, I like reading books (especially self-help books) and playing guitar (I am learning the keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
+        In my free time, I like reading books (especially self-help books) and playing guitar (I am learning the keyboard now). I also write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: lyvd@protonmail.com">Email</a>. </p>
       
        <p>I has been awarded the Marie-Cure Research Scholarship from 2017 to 2020. I have won a silver medal at ASE SRC 2021 with the proposal <a href="https://www.researchgate.net/publication/354987698_PY2SRC_Towards_the_Automatic_and_Reliable_Identification_of_Sources_for_PyPI_Package">py2src</a>.</p>
