adds LastPyMile source code repository

--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@ I am a contributor of several open-source projects including: <a href="https://g
 <a href="https://github.com/cybertier/Backstabbers-Knife-Collection">Backstabber's Knife Collection</a>,
 <a href="https://github.com/assuremoss/Automated-Program-Repair">Automated-Program-Repair</a>
 <ul>
+  <li><a href="https://github.com/assuremoss/lastpymile">lastpymile: Identifying the discrepancy between sources and packages.</a></li>
   <li><a href="https://github.com/lyvd/bandit4mal">bandit4mal: A fork of Bandit tool with patterns to identifying malicious python code.</a></li>
   <li><a href="https://github.com/lyvd/C2Ass">C2Ass: Simluate assembly code for learning purpose.</a></li>
   <li><a href="https://github.com/vuduclyunitn/image_based_malware_detection">hit4mal</a>: A modified version of <a href="https://github.com/cortesi/scurve">scurve</a> to capture semantic information of malware using image processing.</li>
