--- a/quotes.html
+++ b/quotes.html
@@ -62,5 +62,8 @@ it is better to do significant things than to just get along through life to its
         <blockquote >
     3/7/2021: "Hardin once said, 'to succeed, planning along is insufficient. One must improvise as well.' I'll improvise” (Isaac Asimove)
     </blockquote>
+          <blockquote >
+    3/1/2022: "Whatever you do in life, surround yourself with smart people who'll argue with you” (John Wooden)
+    </blockquote>
     </body>
 </html>
