All truths are easy to understand once they are discovered, the point is to discover them

--- a/quotes.html
+++ b/quotes.html
@@ -65,5 +65,8 @@ it is better to do significant things than to just get along through life to its
           <blockquote >
     3/1/2022: "Whatever you do in life, surround yourself with smart people who'll argue with you” (John Wooden)
     </blockquote>
+            <blockquote >
+    8/1/2022: "All truths are easy to understand once they are discovered, the point is to discover them. ” (Galileo)
+    </blockquote>
     </body>
 </html>
