--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body {
     <div class="card">
       <p>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently, I am Security Researcher at Forescout Technologies
      and a Ph.D. candidate at the University of Trento, Italy, supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a>, and I am working on software supply chain security for open-source software and automated program repair</h3>.
-      I am a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
+      I was a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a> (2017-2021). From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
       I was an Early Stage Researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a> from 2017 to 2020.
      Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. </p>
     
