--- a/books.html
+++ b/books.html
@@ -39,7 +39,9 @@
 <li><strong>Data Science for Business</strong>. Foster Provost and Tom Fawcett</li>
 <li><strong>Storytelling With Data: A Data Visualization Guide for Business Professionals</strong>. Cole Nussbaumer Knaflic</li>
 <li><strong>Deep Learning with Python</strong>. François Chollet</li>
-    <li><strong>Practical Deep Learning A Python-Based Introduction </strong>Ronald T. Kneusel</li>
+<li><strong>Practical Deep Learning A Python-Based Introduction </strong>Ronald T. Kneusel</li>
+<li><strong>The Age of AI: And Our Human Future </strong>Daniel P. Huttenlocher</li>
+
 
 </ul>
 <h3 id="security-books">Security books</h3>
