--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,8 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
+   <li><u>Duc-Ly Vu</u>. <b>Towards Understanding and Securing the OSS Supply Chain</b> <a
+        href="papers/vu-thesis-final.pdf"> Ph.D Thesis</a> </li>
   <li><u>Duc-Ly Vu</u>. <b>py2src: Towards the Automatic (and Reliable) Identification of Sources for PyPI Package</b>. To Appear In Proceedings of  The 36th IEEE/ACM International Conference on Automated Software Engineering, Student Research Competition Track. <a
         href="">Preprint</a> </li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
