--- a/quotes.html
+++ b/quotes.html
@@ -68,5 +68,8 @@ it is better to do significant things than to just get along through life to its
             <blockquote >
     8/1/2022: "All truths are easy to understand once they are discovered, the point is to discover them. ” (Galileo)
     </blockquote>
+              <blockquote >
+    24/03/2022: "I remained too much inside my head and ended up losing my mind. ” (Edgar Allan Poe)
+    </blockquote>
     </body>
 </html>
