--- a/books.html
+++ b/books.html
@@ -51,6 +51,7 @@
 </ul>
 <h3 id="novel-books">Novel books</h3>
 <ul>
+<li><strong>The catcher in the eye</strong>J.D. Salinger</li>  
 <li><strong>1Q84</strong>. Haruki Murakami</li>
 <li><strong>Kafa on The Shore</strong>. Haruki Murakami</li>
 <li><strong>Norwegian Wood</strong>. Haruki Murakami</li>
@@ -64,6 +65,7 @@
 </ul>
 <h2 id="historic-books">Historic Books</h2>
 <ul>
+  <li><strong>Vietnam, now</strong>David Lamb</li>
 <li><strong>The Winning Side (Ben Thang Cuoc)</strong>. Huy Duc</li>
 <li><strong>Den Cu</strong>. Tran Dinh</li>
 <li><strong>When the Allies Ran Away (Khi đồng minh tháo chạy</strong>. Nguyễn Tiến Hưng</li>
