--- a/quotes.html
+++ b/quotes.html
@@ -71,5 +71,14 @@ it is better to do significant things than to just get along through life to its
               <blockquote >
     24/03/2022: "I remained too much inside my head and ended up losing my mind. ” (Edgar Allan Poe)
     </blockquote>
+         <blockquote >  
+  "I glanced at the muddy,
+murky, brownish water. The river was notorious for cholera outbreak in mid-19th
+century, and its water was not at all alluring. But I liked the interpretation
+that even filthy water gets to flow into the ocean, evaporate, and later return
+to the river as raindrops. Clean, clear, and full of innocence. For me, this
+perspective suggested a happy scenario that any sins can be cleansed somehow, someday."
+The Catcher in the Eye - Lotta Smith
+  </blockquote>
     </body>
 </html>
