--- a/quotes.html
+++ b/quotes.html
@@ -72,7 +72,7 @@ it is better to do significant things than to just get along through life to its
     24/03/2022: "I remained too much inside my head and ended up losing my mind. ” (Edgar Allan Poe)
     </blockquote>
          <blockquote >  
-  "I glanced at the muddy,
+   03/04/2022: "I glanced at the muddy,
 murky, brownish water. The river was notorious for cholera outbreak in mid-19th
 century, and its water was not at all alluring. But I liked the interpretation
 that even filthy water gets to flow into the ocean, evaporate, and later return
