--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-I am a contributor of several open-source projects including: <a href="https://github.com/IQTLabs/software-supply-chain-compromises">Software Supply Chain Compromises - A Living Dataset</a>,
+I have contributed to a few open-source projects including: <a href="https://github.com/IQTLabs/software-supply-chain-compromises">Software Supply Chain Compromises - A Living Dataset</a>,
 <a href="https://github.com/cybertier/Backstabbers-Knife-Collection">Backstabber's Knife Collection</a>,
 <a href="https://github.com/assuremoss/Automated-Program-Repair">Automated-Program-Repair</a>
 <ul>
