--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body {
         You can contact me by <a href = "mailto: lyvd@protonmail.com">Email</a>. </p>
   <p>I wrote my experience in doing my Ph.D. in Vietnamese, please check it out <a href = "https://docs.google.com/document/d/1KEXtdaZ97_-9pIZlCC32_omSQ4VA9g3EMZD6Wca7k64/edit?usp=sharing
 ">Here</a> </p>
-       <p>I has been awarded the Marie-Cure Research Scholarship from 2017 to 2020. In 2021, I won an ACM silver medal at ASE SRC with the proposal <a href="https://www.researchgate.net/publication/354987698_PY2SRC_Towards_the_Automatic_and_Reliable_Identification_of_Sources_for_PyPI_Package">py2src</a>.</p>
+       <p>I was awarded the Marie Skłodowska-Curie Actions (MSCA) scholarship from 2017 to 2020. In 2021, I won an ACM silver medal at ASE SRC with the proposal <a href="https://www.researchgate.net/publication/354987698_PY2SRC_Towards_the_Automatic_and_Reliable_Identification_of_Sources_for_PyPI_Package">py2src</a>.</p>
       
    <p>  <a href="https://www.linkedin.com/in/ly-vu-865b5819b/">My LinkedIn</a></p>
   <p><a href="https://scholar.google.com/citations?user=sl1ofC0AAAAJ&hl=en&oi=sra">My Google Scholar</a></p>
