--- a/quotes.html
+++ b/quotes.html
@@ -80,5 +80,8 @@ to the river as raindrops. Clean, clear, and full of innocence. For me, this
 perspective suggested a happy scenario that any sins can be cleansed somehow, someday."
 The Catcher in the Eye - Lotta Smith
   </blockquote>
+                <blockquote >
+    15/04/2022: "I have not failed 10,000 times — I’ve successfully found 10,000 ways that will not work.” (Thomas Edison)
+    </blockquote>
     </body>
 </html>
