--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
-I have contributed to a few open-source projects including: <a href="https://github.com/IQTLabs/software-supply-chain-compromises">Software Supply Chain Compromises - A Living Dataset</a>,
+I have been contributing to a few open-source projects including: <a href="https://github.com/IQTLabs/software-supply-chain-compromises">Software Supply Chain Compromises - A Living Dataset</a>,
 <a href="https://github.com/cybertier/Backstabbers-Knife-Collection">Backstabber's Knife Collection</a>,
 <a href="https://github.com/assuremoss/Automated-Program-Repair">Automated-Program-Repair</a>
+<a href="https://hosted.weblate.org/projects/pypa/warehouse/vi/"> Vietnamese translation of PyPI</a>
 <ul>
   <li><a href="https://github.com/assuremoss/lastpymile">lastpymile: Identifying the discrepancy between sources and packages.</a></li>
   <li><a href="https://github.com/lyvd/bandit4mal">bandit4mal: A fork of Bandit tool with patterns to identifying malicious python code.</a></li>
