--- a/books.html
+++ b/books.html
@@ -10,6 +10,8 @@
 <li><strong>Atomic Habits: An Easy &amp; Proven Way to Build Good Habits &amp; Break Bad Ones</strong>. James Clear</li>
 <li><strong>THINK STRAIGHT: Change Your Thoughts, Change Your Life</strong> by Darius Foroux</li>
 <li><strong>Show Your Work!</strong> by Austin Kleon</li>
+<li><strong>Surrounded by idiots</strong> by Thomas Erikson</li>
+
   
 </ul>
 <h3 id="programming-books">Programming books</h3>
