--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <p>Hello, My name is Ly Vu, I am from Binh Phuoc, Vietnam. Currently, I am a leturer, researcher at FPT University and visiting researcher at Chainguard Inc, doing research in sofware supply chain security. 
+      <p>Hello, My name is Ly Vu, I am from Binh Phuoc, Vietnam. Currently, I am a lecturer, researcher at FPT University and visiting researcher at Chainguard Inc, doing research in sofware supply chain security. 
        Before that I was with Forescout Technologies B.V in Eindhoven, NL as a security researcher. I obtained my Ph.D. in Information and Communication Technology (ICT) from the University of Trento, Italy on March 2022, supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a>. I had been working on software supply chain security for open-source software and automated program repair</h3>.
       From Oct 2017 to Jan 2022, I was a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF) in which I am working to translate PyPI to Vietnamese.
       I was an Early Stage Researcher (ESR7) of the <a href="https://www.necs-project.eu/">NECS project</a> from 2017 to 2020 and a researcher of the <a href="https://assuremoss.eu//">AssureMoss project</a> (2020-2022). </p>
