--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
-   <li><u>Duc-Ly Vu</u>. <b>On the feasibility of detecting injections in malicious npm packages</b>. To Appear In Proceedings of The 17th International Conference on Availability, Reliability and Security (ARES 2022).<a
+   <li>Simone Scalco, <u>Duc-Ly Vu, Ranindya Paramitha, Fabio Massacci</u>. <b>On the feasibility of detecting injections in malicious npm packages</b>. To Appear In Proceedings of The 17th International Conference on Availability, Reliability and Security (ARES 2022).<a
         href="https://www.researchgate.net/publication/361476006_On_the_feasibility_of_detecting_injections_in_malicious_npm_packages">Preprint</a> </li>
    <li><u>Duc-Ly Vu</u>. <b>Towards Understanding and Securing the OSS Supply Chain</b> <a
         href="papers/vu-thesis-final.pdf"> Ph.D Thesis</a> </li>
