--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {
       I have been maintaining a repository containing a list of papers and reports related to software supply chain security, check it out <a href="https://github.com/vuduclyunitn/software_supply_chain_papers/blob/main/papers.md">Here</a>
       </p>
     <p>I had been studying and developing malware detection tools for computer systems from Windows malware classifiers to malicious packages in package repositories. With my colleagues, We had developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
-        Levenshtein distance to flag potential combosquatting/typosquatting packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>. 
+        Levenshtein distance to flag potential combosquatting or typosquatting packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>. 
         </p>
       
       <p>From 2015 to 2017, I studied computer security at Hongik University (Sejong Campus), South Korea. During that time, I developed <a href="https://www.researchgate.net/profile/Duc_Ly_Vu/publication/344491557_DeepMal_Deep_Convolutional_and_Recurrent_Neural_Networks_for_Malware_Classification/links/5f7c3baf92851c14bcb17426/DeepMal-Deep-Convolutional-and-Recurrent-Neural-Networks-for-Malware-Classification.pdf">DeepMal</a>
