--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,8 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
+     <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>A Benchmark Comparison of Python Malware Detection Approaches</b> Arxiv.<a
+        href="https://arxiv.org/abs/2209.13288/">Preprint</a> </li>
     <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>Taming Bad Python Packages: Assessing Python Malware Detectors with a Benchmark Dataset</b> Chainguard's blog post.<a
         href="https://blog.chainguard.dev/taming-python-malware-scanners/">Blog</a> </li>
    <li>Simone Scalco, <u>Duc-Ly Vu, Ranindya Paramitha, Fabio Massacci</u>. <b>On the feasibility of detecting injections in malicious npm packages</b>. To Appear In Proceedings of The 17th International Conference on Availability, Reliability and Security (ARES 2022).<a
