--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,8 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
+      <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>Hunting malware on package repositories </b> Chainguard's blog post.<a
+        href="https://www.chainguard.dev/unchained/hunting-malware-on-package-repositories-interviews-with-pypi-maintainers-and-a-comparison-of-alternative-approaches-to-pypi-malware-detection">Blog</a> </li>
      <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>A Benchmark Comparison of Python Malware Detection Approaches</b> Arxiv.<a
         href="https://arxiv.org/abs/2209.13288/">Preprint</a> </li>
     <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>Taming Bad Python Packages: Assessing Python Malware Detectors with a Benchmark Dataset</b> Chainguard's blog post.<a
@@ -65,6 +67,8 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
         2020. <a href="https://www.inderscienceonline.com/doi/abs/10.1504/IJITST.2020.108133">Paper</li>
    <li>Trong-Kha Nguyen and <u>Duc-Ly Vu</u> and Seong Oun Hwang. <b>An efficient neural network model for time series forecasting of malware</b>
         Journal of Intelligent & Fuzzy Systems, 2018. <a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs169849">Paper</li>
+    <li>Duc-Ly <b>Study Windows rootkits</b>
+        Bachelor thesis, 2015. <a href="papers/Rootkit.pdf">Thesis</li>
 </ol>
 
  
