--- a/books.html
+++ b/books.html
@@ -64,6 +64,7 @@
 <li><strong>Deception Point</strong>. Dan Brown</li>
 <li><strong>The Lost Symbol</strong>. Dan Brown</li>
 <li><strong>Angels and Demons</strong>. Dan Brown</li>
+<li><strong>The Silent Patient</strong>Alex Michaelides </li>
 </ul>
 <h2 id="historic-books">Historic Books</h2>
 <ul>
