--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@ ol li{
       <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>Hunting malware on package repositories </b> Chainguard's blog post.<a
         href="https://www.chainguard.dev/unchained/hunting-malware-on-package-repositories-interviews-with-pypi-maintainers-and-a-comparison-of-alternative-approaches-to-pypi-malware-detection">Blog</a> </li>
      <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>A Benchmark Comparison of Python Malware Detection Approaches</b> Arxiv.<a
-        href="https://arxiv.org/abs/2209.13288/">Preprint</a> </li>
+        href="https://arxiv.org/abs/2209.13288/">Preprint (Accepted at ICSE 2023)</a> </li>
     <li>Duc-Ly Vu, Zack Newman, John Speed Meyers</u>. <b>Taming Bad Python Packages: Assessing Python Malware Detectors with a Benchmark Dataset</b> Chainguard's blog post.<a
         href="https://blog.chainguard.dev/taming-python-malware-scanners/">Blog</a> </li>
    <li>Simone Scalco, <u>Duc-Ly Vu, Ranindya Paramitha, Fabio Massacci</u>. <b>On the feasibility of detecting injections in malicious npm packages</b>. To Appear In Proceedings of The 17th International Conference on Availability, Reliability and Security (ARES 2022).<a
