--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <p>Hello, My name is Ly Vu, I am from Binh Phuoc, Vietnam. Currently, I am a lecturer, researcher at FPT University. I was a visiting researcher at Chainguard Inc, doing research in sofware supply chain security from June 2022 to October 2022. 
-       Before that I was with Forescout Technologies B.V in Eindhoven, NL as a security researcher. I obtained my Ph.D. in Information and Communication Technology (ICT) from the University of Trento, Italy on March 2022, supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a>. I have been working on software supply chain security for open-source software and automated program repair</h3>.
-      From Oct 2017 to Jan 2022, I was a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF) in which I am working to translate PyPI to Vietnamese.
+      <p>Hello, My name is Ly Vu, I am from Binh Phuoc, Vietnam. Currently, I am a lecturer at the University of Information Technology, Vietnam National University - Ho Chi Minh. Before that, I was a lecturer and researcher at FPT
+        University from 06/2022 to 08/2023. I was a visiting researcher at Chainguard Inc, doing research in software supply chain security from June 2022 to October 2022. 
+       Before that, I was with Forescout Technologies B.V in Eindhoven, NL as a security researcher. I obtained my Ph.D. in Information and Communication Technology (ICT) from the University of Trento, Italy in March 2022, supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a>. I have been working on software supply chain security for open-source software and automated program repair</h3>.
+      From Oct 2017 to Jan 2022, I was a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. Since 01/04/2021, I have been a contributing member of the Python Software Foundation (PSF) in which I am working to translate PyPI to Vietnamese.
       I was an Early Stage Researcher (ESR7) of the <a href="https://www.necs-project.eu/">NECS project</a> from 2017 to 2020 and a researcher of the <a href="https://assuremoss.eu//">AssureMoss project</a> (2020-2022). </p>
     
       <p>
@@ -127,7 +128,7 @@ body {
         code injections in software supply chain attacks, and please check it out if you are interested in <a href="https://securitylab.disi.unitn.it/lib/exe/fetch.php?media=research_activities:experiments:esecfse2021.pdf">link</a>. This work was mentioned on <a href="https://news.ycombinator.com/item?id=28618074">HackerNews</a> and <a href="https://reproducible-builds.org/de/reports/2021-07/">Reproducible-builds</a>
       I have been maintaining a repository containing a list of papers and reports related to software supply chain security, check it out <a href="https://github.com/vuduclyunitn/software_supply_chain_papers/blob/main/papers.md">Here</a>
       </p>
-    <p>I had been studying and developing malware detection tools for computer systems from Windows malware classifiers to malicious packages in package repositories. With my colleagues, We had developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
+    <p>I had been studying and developing malware detection tools for computer systems from Windows malware classifiers to malicious packages in package repositories. With my colleagues, we developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
         Levenshtein distance to flag potential combosquatting or typosquatting packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>. 
         </p>
       
