--- a/quotes.html
+++ b/quotes.html
@@ -3,7 +3,10 @@
 <body>
 
 <p>My favorite quotes.</p>
-
+<blockquote >
+New quote!
+</blockquote>
+  
 <blockquote >
 Perfection is
 achieved, not when
