--- a/quotes.html
+++ b/quotes.html
@@ -3,6 +3,11 @@
 <body>
 
 <p>My favorite quotes.</p>
+
+<blockquote >
+Hello guys! Have you have a good day :)
+</blockquote>
+  
 <blockquote >
 New quote!
 </blockquote>
