--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <p>Hello, My name is Ly Vu, I am from Binh Phuoc, Vietnam. Currently, I am a lecturer at the University of Information Technology, Vietnam National University - Ho Chi Minh. Before that, I was a lecturer and researcher at FPT
+      <p>Hello, My name is Ly Vu, I am from Binh Phuoc, Vietnam. Currently, I am an independent researcher. Before that, I was a lecturer and researcher at FPT
         University from 06/2022 to 08/2023. I was a visiting researcher at Chainguard Inc, doing research in software supply chain security from June 2022 to October 2022. 
        Before that, I was with Forescout Technologies B.V in Eindhoven, NL as a security researcher. I obtained my Ph.D. in Information and Communication Technology (ICT) from the University of Trento, Italy in March 2022, supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a>. I have been working on software supply chain security for open-source software and automated program repair</h3>.
       From Oct 2017 to Jan 2022, I was a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. Since 01/04/2021, I have been a contributing member of the Python Software Foundation (PSF) in which I am working to translate PyPI to Vietnamese.
