--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
                     <h1>Ly Vu</h1>
                     <p id="keywords">
                         <span>Security Researcher</span> |
-                        <span>Ph.D Candidate</span> |
+                        <span>Ph.D</span> |
                     </p>
                 </div>
             </div>            
@@ -22,8 +22,8 @@
             <img src="figures/avatar.jpg" height="100" alt="Portrait of Ly Vu">  
             <p>
                 <br>               
-                Welcome! My name is Ly Vu (Duc) and I'm a third year Ph.D
-                candidate in <strong>Computer Security</strong> the
+                Welcome! My name is Ly Vu (Duc) and I got a Ph.D
+                 in <strong>Software Supply Chain Security</strong> the
                 <strong>University of Trento, Italy</strong>. 
                 <br> <br>
                 My research interest is the <strong>software supply chain
