--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@ body {
   <p><a href="https://www.hackerrank.com/vuducly151092">My HackerRank profile</a></p>
   <p><a href="https://orcid.org/0000-0002-5445-2729">My ORCID</a></p>
   
+<h3 id="mindset-books">Supervised students</h3>
+<ul>
+<li><strong>Man&#39;s Nguyen Thanh Cong</strong>UIT</li>
+<li><strong>Vu Minh Khanh</strong>BCU-UIT</li>
+<li><strong>Huynh Huu Thang</strong>BCU-UIT</li>
+<li><strong>Tran Le Quoc Huy</strong>BCU-UIT<</li>
+<li><strong>Tran Thanh Truc</strong>BCU-UIT</li>
+<li><strong>Do Anh Hao</strong>BCU-UIT</li>
+<li><strong>Simone Scalco</strong>UNITN</li>
 
      
    
